k8s-specifications/vote-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: vote
spec:
  ingressClassName: nginx
  rules:
  - host: voting.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 8080
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 8081
