k8s-specifications/vote-dev/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: vote

spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: vote

spec:
  podSelector: {}

  policyTypes:
  - Egress

  egress:
  - ports:
    - protocol: UDP
      port: 53

    - protocol: TCP
      port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-result-to-postgres
  namespace: vote

spec:
  podSelector:
    matchLabels:
      app: result

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres
      podSelector:
        matchLabels:
          app: db

    ports:
    - protocol: TCP
      port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-worker-to-postgres
  namespace: vote

spec:
  podSelector:
    matchLabels:
      app: worker

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres
      podSelector:
        matchLabels:
          app: db

    ports:
    - protocol: TCP
      port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-to-redis
  namespace: vote

spec:
  podSelector:
    matchLabels:
      app: vote

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redis
      podSelector:
        matchLabels:
          app: redis

    ports:
    - protocol: TCP
      port: 6379

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-worker-to-redis
  namespace: vote

spec:
  podSelector:
    matchLabels:
      app: worker

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redis
      podSelector:
        matchLabels:
          app: redis

    ports:
    - protocol: TCP
      port: 6379

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-vote
  namespace: vote

spec:
  podSelector:
    matchLabels:
      app: vote

  policyTypes:
  - Ingress

  ingress:
  - ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-result
  namespace: vote

spec:
  podSelector:
    matchLabels:
      app: result

  policyTypes:
  - Ingress

  ingress:
  - ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-vote
  namespace: vote
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-result
  namespace: vote
spec:
  podSelector:
    matchLabels:
      app: result
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-result
  namespace: vote
spec:
  podSelector:
    matchLabels:
      app: result
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
